Remove antiquated GORACE setting.

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 test: fmt
-	GOEXPERIMENT=jsonv2 GORACE="atexit_sleep_ms=50" go test -timeout=1s -short -race -covermode=atomic ./...
+	GOEXPERIMENT=jsonv2 go test -timeout=1s -short -race -covermode=atomic ./...
 
 fmt:
 	go fmt ./... && go mod tidy
